--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   image_picker: ^1.1.2
   http: ^1.3.0
+  provider: ^6.1.2
+  formatted_text: ^4.0.1
+  firebase_core: ^3.12.0
 
 dev_dependencies:
   flutter_test:
