--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,15 @@ dependencies:
   provider: ^6.1.2
   formatted_text: ^4.0.1
   firebase_core: ^3.12.0
+  cloud_firestore: ^5.6.4
+  firebase_auth: ^5.5.0
+  firebase_app_check: ^0.3.2+3
+  google_sign_in: ^6.2.2
+  dio: ^5.8.0+1
+  delightful_toast: ^1.1.0
+  smooth_page_indicator: ^1.2.0+3
+  lottie: ^3.1.3
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -64,9 +73,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/auth/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
