--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   smooth_page_indicator: ^1.2.0+3
   lottie: ^3.1.3
   google_fonts: ^6.2.1
+  flutter_carousel_widget: ^3.1.0
+  card_swiper: ^3.0.1
+  table_calendar: ^3.2.0
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +78,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/auth/
+    - assets/feed/
+    - assets/products/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
