--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,10 @@ dependencies:
   flutter_carousel_widget: ^3.1.0
   card_swiper: ^3.0.1
   table_calendar: ^3.2.0
-
+  google_maps_flutter: ^2.10.0
+  geolocator: ^13.0.2
+  permission_handler: ^11.3.1
+  flutter_direct_call_plus: ^0.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
