--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   geolocator: ^13.0.2
   permission_handler: ^11.3.1
   shared_preferences: ^2.3.3
+  direct_caller_sim_choice: ^1.0.5
   # flutter_direct_call_plus: ^0.0.3
 dev_dependencies:
   flutter_test:
@@ -101,6 +102,7 @@ flutter:
     - assets/products/
     - assets/icon/
     - assets/ai_model/
+    - assets/all_images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
