--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,12 +50,15 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_carousel_widget: ^3.1.0
   card_swiper: ^3.0.1
-  table_calendar: ^3.2.0
+  table_calendar: 3.1.3
   google_maps_flutter: ^2.10.0
   geolocator: ^13.0.2
   permission_handler: ^11.3.1
   shared_preferences: ^2.3.3
   direct_caller_sim_choice: ^1.0.5
+  flutter_localization: ^0.3.1
+  google_api_availability: ^5.0.1
+  
 
 dev_dependencies:
   flutter_test:
