--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   uuid: ^4.5.1
+  url_launcher: ^6.3.1
 
 
 
@@ -83,17 +84,17 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/icon/icon1.jpg"
+  image_path: "assets/icon/icon3.png"
   web:
     generate: true
-    image_path: "assets/icon/icon1.jpg"
+    image_path: "assets/icon/icon3.png"
   windows:
     generate: true
-    image_path: "assets/icon/icon1.jpg"
+    image_path: "assets/icon/icon3.png"
     icon_size: 48 # min:48, max:256, default: 48
   macos:
     generate: true
-    image_path: "assets/icon/icon1.jpg"
+    image_path: "assets/icon/icon3.png"
 
 # The following section is specific to Flutter packages.
 flutter:
