--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
     sdk: flutter
   uuid: ^4.5.1
   url_launcher: ^6.3.1
+  flutter_svg: ^2.0.17
 
 
 
@@ -113,6 +114,7 @@ flutter:
     - assets/icon/
     - assets/ai_model/
     - assets/profile/
+    - assets/schemes/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
